// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.QRCode className="my-classname" 1`] = `
<span
  className="uu5-bricks-q-r-code uu-bricks-1w73uij my-classname"
  id="uuID"
>
  <Suspense
    fallback=""
  >
    <lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode default props 1`] = `
<span
  className="uu5-bricks-q-r-code uu-bricks-1w73uij"
  id="uuID"
>
  <Suspense
    fallback=""
  >
    <lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode id="myId" 1`] = `
<span
  className="uu5-bricks-q-r-code uu-bricks-1w73uij"
  id="myId"
>
  <Suspense
    fallback=""
  >
    <lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode mainAttrs=undefined 1`] = `
<span
  className="uu5-bricks-q-r-code uu-bricks-1w73uij"
  id="uuID"
>
  <Suspense
    fallback=""
  >
    <lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode name="myName" 1`] = `
<span
  className="uu5-bricks-q-r-code uu-bricks-1w73uij"
  id="uuID"
  name="myName"
>
  <Suspense
    fallback=""
  >
    <lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode noIndex=false 1`] = `
<span
  className="uu5-bricks-q-r-code uu-bricks-1w73uij"
  id="uuID"
>
  <Suspense
    fallback=""
  >
    <lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode noIndex=true 1`] = `
<span
  className="uu5-bricks-q-r-code uu-bricks-1w73uij uu5-noindex"
  id="uuID"
>
  <Suspense
    fallback=""
  >
    <lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode style="padding:8px; borderRadius: 2px" 1`] = `
<span
  className="uu5-bricks-q-r-code uu-bricks-1w73uij"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
>
  <Suspense
    fallback=""
  >
    <lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode style={"backgroundColor":"red","color":"blue"} 1`] = `
<span
  className="uu5-bricks-q-r-code uu-bricks-1w73uij"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
>
  <Suspense
    fallback=""
  >
    <lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode tooltip="My Tooltip" 1`] = `
<span
  className="uu5-bricks-q-r-code uu-bricks-1w73uij"
  id="uuID"
  title="My Tooltip"
>
  <Suspense
    fallback=""
  >
    <lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode value="https://uuos9.plus4u.net/uu-bookkitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=uu5BricksQRCode" 1`] = `
<span
  className="uu5-bricks-q-r-code uu-bricks-1w73uij"
  id="uuID"
>
  <Suspense
    fallback=""
  >
    <lazy
      level="L"
      renderAs="svg"
      size={128}
      value="https://uuos9.plus4u.net/uu-bookkitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=uu5BricksQRCode"
    />
  </Suspense>
</span>
`;
